Added build scripts

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "build_lib": "ng build --prod --project @cyazyx/cx-mat-layout",
-    "npm_pack": "cd dist/cyazyx/cx-mat-layout && npm pack",
+    "bump_version": "node tools/version-increment.js",
+    "gitversion": "node tools/git-version-all.js",
+    "npm_pack": "npm run bump_version && cd dist/cyazyx/cx-mat-layout && npm pack",
     "package": "npm run build_lib && npm run npm_pack",
-    "install_local": "npm run package && npm install dist/cyazyx/cx-mat-layout/cyazyx-cx-mat-layout-0.0.1.tgz",
+    "install_local": "node tools/install-local.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -25,7 +27,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
-    "@cyazyx/cx-mat-layout": "file:dist/cyazyx/cx-mat-layout/cyazyx-cx-mat-layout-0.0.1.tgz",
+    "@cyazyx/cx-mat-layout": "file:dist/cyazyx/cx-mat-layout/cyazyx-cx-mat-layout-0.0.2.tgz",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -35,10 +37,11 @@
     "@angular-devkit/build-ng-packagr": "~0.901.7",
     "@angular/cli": "~9.1.7",
     "@angular/compiler-cli": "~9.1.9",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "fs-extra": "^9.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
