--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build_lib": "ng build --prod --project @cyazyx/cx-mat-layout",
     "bump_version": "node tools/version-increment.js",
     "gitversion": "node tools/git-version-all.js",
-    "npm_pack": "npm run bump_version && cd dist/cyazyx/cx-mat-layout && npm pack",
-    "package": "npm run build_lib && npm run npm_pack",
+    "npm_pack": "cd dist/cyazyx/cx-mat-layout && npm pack",
+    "package": "npm run bump_version && npm run build_lib && npm run npm_pack",
+    "deploy": "npm run bump_version && npm run build_lib && npm run gitversion",
     "install_local": "node tools/install-local.js",
     "test": "ng test",
     "lint": "ng lint",
