--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: npm Publish
+name: Publish npm
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
