--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Publish npm
 
 # Controls when the action will run. Triggers the workflow on push or pull request
@@ -19,11 +17,13 @@ jobs:
       uses: actions/setup-node@master
       with:
         node-version: 14.2.0
-    - name: Publish if version has been updated
-      uses: pascalgn/npm-publish-action@4f4bf159e299f65d21cd1cbd96fc5d53228036df
-      with: # All of theses inputs are optional
-        tag_name: "v%s"
-        tag_message: "v%s"
+    - name: Install packages
+      run: npm install
+    - name: Build deployment package
+      run: npm run prepare_deploy
+    - name: Publish package
+    - run: cd dist/cyazyx/cx-mat-layout
+    - run: npm publish
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
