--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,17 +14,13 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@master
     - name: Set up Node.js
-      uses: actions/setup-node@master
+      uses: actions/setup-node@v1
       with:
         node-version: 14.2.0
-    - name: Install packages
-      run: npm install
-    - name: Build deployment package
-      run: npm run prepare_deploy
-    - name: Change to build directory
-      run: cd dist/cyazyx/cx-mat-layout
-    - name: Publish package
-      run: npm publish
+    - run: npm ci
+    - run: npm run prepare_deploy
+    - run: cd dist/cyazyx/cx-mat-layout
+    - run: npm publish
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
