--- a/projects/cyazyx/cx-mat-layout/package.json
+++ b/projects/cyazyx/cx-mat-layout/package.json
@@ -1,19 +1,23 @@
 {
   "name": "@cyazyx/cx-mat-layout",
-  "version": "0.0.10",
+  "version": "0.919.2",
   "description": "Material layout common implementation scenarios and helpers. Easily setup a sidebar and top navigation with ZERO hustle.",
   "author": {
     "email": "mushierc@gmail.com",
     "name": "Cyrus Mushier",
     "url": "https://www.linkedin.com/in/mushierc/"
   },
+  "license": "MIT",
+  "repository": "https://gitbub.com/cyazyx/cx-mat-layout.git",
   "keywords": [
     "material",
     "layout",
     "sidenav",
     "sidebar",
     "navigation",
-    "mat-layout"
+    "mat-layout",
+    "mat-sidenav",
+    "mat-toolbar"
   ],
   "peerDependencies": {
     "@angular/common": "^9.1.9",
