--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "build_lib": "ng build --prod --project @cyazyx/cx-mat-layout",
     "bump_version": "node tools/version-increment.js",
     "gitversion": "node tools/git-version-all.js",
+    "dependency_update": "node tools/version-local-clean.js",
     "npm_pack": "cd dist/cyazyx/cx-mat-layout && npm pack",
     "package": "npm run build_lib && npm run npm_pack",
-    "prepare_deploy": "npm run bump_version && npm run build_lib && npm run gitversion",
+    "prepare_deploy": "npm run bump_version && npm run build_lib && npm run dependency_update && npm run gitversion",
     "install_local": "npm run package && node tools/install-local.js",
     "publish_public": "cd dist/cyazyx/cx-mat-layout && npm publish --access public",
     "test": "ng test",
@@ -31,7 +32,7 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
-    "@cyazyx/cx-mat-layout": "file:dist/cyazyx/cx-mat-layout/cyazyx-cx-mat-layout-0.9111.1.tgz",
+    "@cyazyx/cx-mat-layout": "",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
