--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,8 +19,7 @@ jobs:
         node-version: 14.2.0
     - run: npm ci
     - run: npm run build_lib
-    - run: cd dist/cyazyx/cx-mat-layout
-    - run: npm publish
+    - run: npm run publish_public
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
