--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/setup-node@master
       with:
         node-version: 14.2.0
-    - run: npm ci
+    - run: npm i
     - run: npm run build_lib
     - run: npm run publish_public
       env:
