--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "package": "npm run build_lib && npm run npm_pack",
     "prepare_deploy": "npm run dependency_update && npm run bump_version && npm run build_lib && npm run gitversion",
     "install_local": "npm run package && node tools/install-local.js",
-    "publish_public": "npm publish dist/cyazyx/cx-mat-layout --access public",
+    "publish_public": "cd dist/cyazyx/cx-mat-layout && npm publish --access public",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
