--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "@angular/platform-browser": "~11.0.2",
         "@angular/platform-browser-dynamic": "~11.0.2",
         "@angular/router": "~11.0.2",
-        "@cyazyx/cx-mat-layout": "file:dist/cyazyx/cx-mat-layout/cyazyx-cx-mat-layout-1.2.0.tgz",
+        "@cyazyx/cx-mat-layout": "",
         "rxjs": "~6.6.3",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.2"
