--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     }
   },
   "angularCompilerOptions": {
+    "compilationMode": "partial",
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
   }
